# hallucination

./: .gitignore  README.md  gateway_model_candidates.json  gateway_models.example.json  pyproject.toml  run_pipeline.py
data/: generations_mvp.jsonl  prompts.jsonl  prompts_mvp.jsonl  secure.jsonl
data/prompt_sets/: neutral.jsonl  prototype.jsonl  secure.jsonl
examples/: prompts.example.jsonl
outputs/: 03_forced_invalid_cli_gpt-5.py  06_forced_conflicting_constraints_gpt-5.py  artifacts.jsonl  report.jsonl  trace.jsonl
outputs/bundles/: 0_01_forced_fake_dependency_0.jsonl  0_04_forced_nonexistent_package_version_0.jsonl  10_06_forced_conflicting_constraints_0.jsonl  11_06_forced_conflicting_constraints_1.jsonl  12_06_forced_conflicting_constraints_2.jsonl  13_06_forced_conflicting_constraints_3.jsonl  14_06_forced_conflicting_constraints_4.jsonl  15_01_forced_fake_dependency_0.jsonl  16_01_forced_fake_dependency_1.jsonl  17_01_forced_fake_dependency_2.jsonl  18_01_forced_fake_dependency_3.jsonl  19_01_forced_fake_dependency_4.jsonl  1_02_forced_fake_api_0.jsonl  20_02_forced_fake_api_0.jsonl  21_02_forced_fake_api_1.jsonl  22_02_forced_fake_api_2.jsonl  23_02_forced_fake_api_3.jsonl  24_02_forced_fake_api_4.jsonl  (+35 more)
results/: failure_checks.jsonl  failure_summary.json  failure_summary_by_metric.csv  failure_summary_by_model.csv  failure_summary_by_prompt.csv  top_hallucinations.csv
tests/: test_cli.py  test_experiment.py  test_failure_checks.py  test_generator_api.py  test_grouped_pipeline.py  test_hallucination_checks.py  test_import_stability.py  test_trace.py
(+126 files in other folders)
